--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <main class="main-index">
     <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
     
-    <img src="images/main/welcome-logo.svg" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
+    <img class="main-bg-img" src="images/main/welcome-logo.svg" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
     
     <p class="main-title">Седона — небольшой городок в Аризоне,
       заслуживающий большего! </p>
