--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 
   <main class="main-index">
     <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
-    
-    <img class="main-bg-img" src="images/main/welcome-logo.svg" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
-    
+    <div clacc="main-bg-img">
+      <p class="main-mask">
+        <img src="images/main/welcome-logo.svg" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
+      </p>
+    </div>
     <p class="main-title">Седона — небольшой городок в Аризоне,
       заслуживающий большего! </p>
     <p class="main-description"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
