--- a/index.html
+++ b/index.html
@@ -52,58 +52,62 @@
     <div class="main-background">
       <img class="main-logo" src="images/main/welcome-logo.svg" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
     </div>
-    <p class="main-title">Седона — небольшой городок в Аризоне,
+    <p class="main-title">Седона — небольшой городок в Аризоне,<br>
       заслуживающий большего! </p>
     <p class="main-description"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества</h2>
 
       <ol class="advantages-list">
+      <div class="advantages-list-white-block">
         <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
-          <h3 class="advantages-title advantages-title-white">Настоящий городок</h3>
+          <h3 class="advantages-title advantages-title-white">Настоящий <br> городок</h3>
           <p class="advantages-description-number advantages-description-white">— №1 —</p>
-          <p class="advantages-description advantages-description-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <div class="advantages-item-img"></div>
+          <p class="advantages-description advantages-description-white">Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
         </li>
+        <div class="advantages-item-img"></div>
+      </div> 
         <li class="rgba advantages-item">
-          <h3 class="advantages-title">Жильё</h3>
-          <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          <h3 class="advantages-title advantages-title-with-picture">Жильё</h3>
+          <p class="advantages-description">Рекомендуем пожить <br> в настоящем мотеле, <br> всё как в кино!</p>
         </li>
         <li class="advantages-item">
-          <h3 class="advantages-title">Еда</h3>
-          <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <h3 class="advantages-title advantages-title-with-picture">Еда</h3>
+          <p class="advantages-description">Всегда заказывайте <br> топовый фирменный бургер, <br> вы не разочаруетесь!</p>
         </li>
         <li class="rgba advantages-item">
-          <h3 class="advantages-title">Сувениры</h3>
-          <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+          <h3 class="advantages-title advantages-title-with-picture">Сувениры</h3>
+          <p class="advantages-description">Не только китайского, <br> но и настоящего местного <br> производства!</p>
         </li>
+      <div class="advantages-list-white-block">
+        <img src="images/main/devils-bridge.jpg" width="800" height="384" alt="Каньон «Седона»">
         <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
-          <img src="images/main/devils-bridge.jpg" width="800" height="382" alt="Каньон «Седона»">
-          <h3 class="advantages-title advantages-title-white">Там есть мост дьявола</h3>
+          <h3 class="advantages-title advantages-title-white">Там есть <br> мост дьявола</h3>
           <p class="advantages-description-number advantages-description-white">— №2 —</p>
-          <p class="advantages-description advantages-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <p class="advantages-description advantages-description-white">Да, по нему можно пройти! <br> Если вы осмелитесь, <br> разумеется</p>
         </li>
+      </div>
         <li class="rgba advantages-item">
-          <h3 class="advantages-title">Небольшая площадь</h3>
+          <h3 class="advantages-title advantages-title-without-picture">Небольшая <br> площадь</h3>
           <p class="advantages-description-number">— №3 —</p>
-          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          <p class="advantages-description">Все достопримечательности <br> находятся очень близко</p>
         </li>
         <li class="rgba2 advantages-item">
-          <h3 class="advantages-title">Красивая дорога</h3>
+          <h3 class="advantages-title advantages-title-without-picture">Красивая <br> дорога</h3>
           <p class="advantages-description-number">— №4 —</p>
-          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <p class="advantages-description">Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
         </li>
         <li class="rgba advantages-item">
-          <h3 class="advantages-title">Мало туристов</h3>
+          <h3 class="advantages-title advantages-title-without-picture">Мало <br> туристов</h3>
           <p class="advantages-description-number">— №5 —</p>
-          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          <p class="advantages-description">Большинство едет в Гранд <br> Каньон и толпится там</p>
         </li>
       </ol>
     </section>
 
     <section class="appointment">
       <h2 class="appointment-title">Заинтересовались?</h2>
-      <p class="appointment-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <p class="appointment-description">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="button catalog-button" href="catalog.html">Поиск Гостиницы в Седоне</a>
     </section>
   </div>
@@ -112,7 +116,7 @@
   <footer class="page-footer">
     <section class="newsletter">
       <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-      <p class="page-footer-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <p class="page-footer-description">Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="newsletter-email">
           <span class="visually-hidden">Email</span> 
@@ -127,17 +131,17 @@
     <section class="footer-social">
       <h2 class="visually-hidden">Контакты</h2>
       <ul class="footer-social-list">
-        <li class="footer-social-vk">
+        <li class="footer-social-item footer-social-vk">
           <a class="contacts" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">ВКонтакте</span>
           </a>
         </li>
-        <li class="footer-social-tg">
+        <li class="footer-social-item footer-social-tg">
           <a class="contacts" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
-        <li class="footer-social-yt">
+        <li class="footer-social-item footer-social-yt">
           <a class="contacts" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Ютуб</span>
           </a>
