--- a/catalog.html
+++ b/catalog.html
@@ -25,14 +25,14 @@
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
-        <li class="navigation-item search">
+        <li class="navigation-item navigation-item-search">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Поиск
             </span>
           </a>
         </li>
-        <li class="navigation-item basket">
+        <li class="navigation-item navigation-item-basket">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Корзина
@@ -118,7 +118,7 @@
     </div>
 
     <section class="catalog-product">
-    <div class="catalog-search">
+    <div class="catalog-search catalog-filter">
       <h2 class="offers-found"> Найдено гостиниц: 38</h2>
       <select class="select-control" aria-label="Сортировка">
         <option value="cheap">Сначала дешёвое</option>
@@ -147,6 +147,7 @@
           <p class="hotel">Гостиница
             <b class="product-card-price">От 4000 ₽</b>
           </p>
+          <div class="product-card-flex-box">
           <a class="button product-card-more " href="#">подробнее</a>
           <button class="button product-card-button">в избранное</button>
           <p class="rating">
@@ -157,6 +158,7 @@
             <span class="visually-hidden">4 звезды</span>
             <b class="button rating-number">Рейтинг: 8,5</b>
           </p>
+        </div>
         </li>
 
         <li class="product-card">
@@ -254,7 +256,7 @@
     <section class="catalog-newsletter">
       
       <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-      <p class="page-footer-description-catalog">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <p class="page-footer-description page-footer-description-catalog">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="newsletter-email">
           <span class="visually-hidden">Email</span> 
