--- a/catalog.html
+++ b/catalog.html
@@ -144,21 +144,24 @@
             <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="Гостиница вид на звезды">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
-          <p class="hotel">Гостиница
-            <b class="product-card-price">От 4000 ₽</b>
-          </p>
-          <div class="product-card-flex-box">
-          <a class="button product-card-more " href="#">подробнее</a>
-          <button class="button product-card-button">в избранное</button>
-          <p class="rating">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+          <div class="product-card-button-flex-box">
+            <p class="overall-size hotel-card-price">Гостиница</p>
+            <b class="overall-size hotel-card-price">От 4000 ₽</b>
+            </div>
+          <div class="product-card-button-flex-box">
+          <a class="button overall-size product-card-more " href="#">подробнее</a>
+          <button class="button overall-size product-card-button">в избранное</button>
+          </div>
+          <div class="product-card-button-flex-box">
+          <p class="overall-size rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">4 звезды</span>
-            <b class="button rating-number">Рейтинг: 8,5</b>
           </p>
-        </div>
+          <b class="button overall-size rating-number">Рейтинг: 8,5</b>
+          </div>
         </li>
 
         <li class="product-card">
@@ -166,19 +169,24 @@
             <img class="product-card-image" src="images/hotel/hotel-1-2.jpg" width="300" height="211" alt="Гостиница вид на скалы с юга">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
-          <p class="hotel">Гостиница
-            <b class="product-card-price">От 5000 ₽</b>
-          </p>
-          <a class="button product-card-more" href="#">подробнее</a>
-          <button class="button product-card-button" type="button" checked>в избранное</button>
-          <p class="rating">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+          <div class="product-card-button-flex-box">
+          <p class="overall-size hotel-card-price">Гостиница</p>
+          <b class="overall-size hotel-card-price">От 5000 ₽</b>
+          </div>
+          <div class="product-card-button-flex-box">
+          <a class="button overall-size product-card-more" href="#">подробнее</a>
+          <button class="button overall-size product-card-button" type="button" checked>в избранное</button>
+          </div>
+          <div class="product-card-button-flex-box">
+          <p class="overall-size rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">4 звезды</span>
-            <b class="button rating-number">Рейтинг: 9,2</b>
           </p>
+          <b class="button overall-size rating-number">Рейтинг: 9,2</b>
+          </div>
         </li>
 
         <li class="product-card">
@@ -186,18 +194,23 @@
             <img class="product-card-image" src="images/hotel/hotel-1-3.jpg" width="300" height="211" alt="Гостиница вид на скалы с севера">
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
-          <p class="hotel">Гостиница
-            <b class="product-card-price">От 2500 ₽</b>
-          </p>
-          <a class="button product-card-more" href="#">подробнее</a>
-          <button class="button product-card-button" type="button">в избранное</button>
-          <p class="rating">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+          <div class="product-card-button-flex-box">
+            <p class="overall-size hotel-card-price">Гостиница</p>
+            <b class="overall-size hotel-card-price">От 2500 ₽</b>
+            </div>
+          <div class="product-card-button-flex-box">
+          <a class="button overall-size product-card-more" href="#">подробнее</a>
+          <button class="button overall-size product-card-button" type="button">в избранное</button>
+          </div>
+          <div class="product-card-button-flex-box">
+          <p class="overall-size rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">3 звезды</span>
-            <b class="button rating-number">Рейтинг: 6,9</b>
           </p>
+          <b class="button overall-size rating-number">Рейтинг: 6,9</b>
+          </div>
         </li>
 
         <li class="product-card">
@@ -205,18 +218,23 @@
             <img class="product-card-image" src="images/hotel/hotel-1-4.jpg" width="300" height="211" alt="Гостиница вид на скалы с востока">
             <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
-          <p class="hotel">Гостиница
-            <b class="product-card-price">От 1500 ₽</b>
-          </p>
-          <a class="button product-card-more" href="#">подробнее</a>
-          <button class="button product-card-button" type="button">в избранное</button>
-          <p class="rating">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+          <div class="product-card-button-flex-box">
+            <p class="overall-size hotel-card-price">Гостиница</p>
+            <b class="overall-size hotel-card-price">От 1500 ₽</b>
+            </div>
+          <div class="product-card-button-flex-box">
+          <a class="button overall-size product-card-more" href="#">подробнее</a>
+          <button class="button overall-size product-card-button" type="button">в избранное</button>
+          </div>
+          <div class="product-card-button-flex-box">
+          <p class="overall-size rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">2 звезды</span>
-            <b class="button rating-number">Рейтинг: 5,0</b>
           </p>
+          <b class="button overall-size rating-number">Рейтинг: 5,0</b>
         </li>
+        </div>
       </ul>
     </div>
 
@@ -289,18 +307,20 @@
         </ul>
       </section>
   
-      <section class="footer-contacts-address">
+      <div class="footer-contacts-address">
         <p class="footer-contacts-address-phone">
           <a href="tel:+78128121212">+7 (812) 812-12-12</a>
         </p>
-      </section>
+      </div>
   
-      <section class="footer-htmlacademy-link">
+      <div class="footer-htmlacademy-link">
         <p class="htmlacademy-link">
+          <a href="https://htmlacademy.ru/">
           <img src="images/footer/html-academy.svg" alt="Ссылка на страницу HTML Academy.">
-          <a href="https://htmlacademy.ru/">.html academy</a>
+          <span class="visually-hidden">.html academy</span>
+          </a>
         </p> 
-      </section>
+      </div>
     </div>
   </footer>
 </body>
