--- a/5/catalog.html
+++ b/5/catalog.html
@@ -26,14 +26,14 @@
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
-        <li class="navigation-item search">
+        <li class="navigation-item navigation-item-search">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Поиск
             </span>
           </a>
         </li>
-        <li class="navigation-item basket">
+        <li class="navigation-item navigation-item-basket">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Корзина
@@ -119,7 +119,7 @@
     </div>
 
     <section class="catalog-product">
-    <div class="catalog-search">
+    <div class="catalog-search catalog-filter">
       <h2 class="offers-found"> Найдено гостиниц: 38</h2>
       <select class="select-control" aria-label="Сортировка">
         <option value="cheap">Сначала дешёвое</option>
@@ -145,19 +145,24 @@
             <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="Гостиница вид на звезды">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
-          <p class="hotel">Гостиница
-            <b class="product-card-price">От 4000 ₽</b>
-          </p>
-          <a class="button product-card-more " href="#">подробнее</a>
-          <button class="button product-card-button">в избранное</button>
-          <p class="rating">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+          <div class="product-card-button-flex-box">
+            <p class="overall-size hotel-card-price">Гостиница</p>
+            <b class="overall-size hotel-card-price">От 4000 ₽</b>
+            </div>
+          <div class="product-card-button-flex-box">
+          <a class="button overall-size product-card-more " href="#">подробнее</a>
+          <button class="button overall-size product-card-button">в избранное</button>
+          </div>
+          <div class="product-card-button-flex-box">
+          <p class="overall-size rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">4 звезды</span>
-            <b class="button rating-number">Рейтинг: 8,5</b>
           </p>
+          <b class="button overall-size rating-number">Рейтинг: 8,5</b>
+          </div>
         </li>
 
         <li class="product-card">
@@ -165,19 +170,24 @@
             <img class="product-card-image" src="images/hotel/hotel-1-2.jpg" width="300" height="211" alt="Гостиница вид на скалы с юга">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
-          <p class="hotel">Гостиница
-            <b class="product-card-price">От 5000 ₽</b>
-          </p>
-          <a class="button product-card-more" href="#">подробнее</a>
-          <button class="button product-card-button" type="button" checked>в избранное</button>
-          <p class="rating">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+          <div class="product-card-button-flex-box">
+          <p class="overall-size hotel-card-price">Гостиница</p>
+          <b class="overall-size hotel-card-price">От 5000 ₽</b>
+          </div>
+          <div class="product-card-button-flex-box">
+          <a class="button overall-size product-card-more" href="#">подробнее</a>
+          <button class="button overall-size product-card-button" type="button" checked>в избранное</button>
+          </div>
+          <div class="product-card-button-flex-box">
+          <p class="overall-size rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">4 звезды</span>
-            <b class="button rating-number">Рейтинг: 9,2</b>
           </p>
+          <b class="button overall-size rating-number">Рейтинг: 9,2</b>
+          </div>
         </li>
 
         <li class="product-card">
@@ -185,18 +195,23 @@
             <img class="product-card-image" src="images/hotel/hotel-1-3.jpg" width="300" height="211" alt="Гостиница вид на скалы с севера">
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
-          <p class="hotel">Гостиница
-            <b class="product-card-price">От 2500 ₽</b>
-          </p>
-          <a class="button product-card-more" href="#">подробнее</a>
-          <button class="button product-card-button" type="button">в избранное</button>
-          <p class="rating">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+          <div class="product-card-button-flex-box">
+            <p class="overall-size hotel-card-price">Гостиница</p>
+            <b class="overall-size hotel-card-price">От 2500 ₽</b>
+            </div>
+          <div class="product-card-button-flex-box">
+          <a class="button overall-size product-card-more" href="#">подробнее</a>
+          <button class="button overall-size product-card-button" type="button">в избранное</button>
+          </div>
+          <div class="product-card-button-flex-box">
+          <p class="overall-size rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">3 звезды</span>
-            <b class="button rating-number">Рейтинг: 6,9</b>
           </p>
+          <b class="button overall-size rating-number">Рейтинг: 6,9</b>
+          </div>
         </li>
 
         <li class="product-card">
@@ -204,18 +219,23 @@
             <img class="product-card-image" src="images/hotel/hotel-1-4.jpg" width="300" height="211" alt="Гостиница вид на скалы с востока">
             <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
-          <p class="hotel">Гостиница
-            <b class="product-card-price">От 1500 ₽</b>
-          </p>
-          <a class="button product-card-more" href="#">подробнее</a>
-          <button class="button product-card-button" type="button">в избранное</button>
-          <p class="rating">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
-            <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+          <div class="product-card-button-flex-box">
+            <p class="overall-size hotel-card-price">Гостиница</p>
+            <b class="overall-size hotel-card-price">От 1500 ₽</b>
+            </div>
+          <div class="product-card-button-flex-box">
+          <a class="button overall-size product-card-more" href="#">подробнее</a>
+          <button class="button overall-size product-card-button" type="button">в избранное</button>
+          </div>
+          <div class="product-card-button-flex-box">
+          <p class="overall-size rating-star">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
+            <img class="img-star" src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">2 звезды</span>
-            <b class="button rating-number">Рейтинг: 5,0</b>
           </p>
+          <b class="button overall-size rating-number">Рейтинг: 5,0</b>
         </li>
+        </div>
       </ul>
     </div>
 
@@ -255,7 +275,7 @@
     <section class="catalog-newsletter">
       
       <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-      <p class="page-footer-description-catalog">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <p class="page-footer-description page-footer-description-catalog">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="newsletter-email">
           <span class="visually-hidden">Email</span> 
@@ -288,18 +308,20 @@
         </ul>
       </section>
   
-      <section class="footer-contacts-address">
+      <div class="footer-contacts-address">
         <p class="footer-contacts-address-phone">
           <a href="tel:+78128121212">+7 (812) 812-12-12</a>
         </p>
-      </section>
+      </div>
   
-      <section class="footer-htmlacademy-link">
+      <div class="footer-htmlacademy-link">
         <p class="htmlacademy-link">
+          <a href="https://htmlacademy.ru/">
           <img src="images/footer/html-academy.svg" alt="Ссылка на страницу HTML Academy.">
-          <a href="https://htmlacademy.ru/">.html academy</a>
+          <span class="visually-hidden">.html academy</span>
+          </a>
         </p> 
-      </section>
+      </div>
     </div>
   </footer>
 </body>
