--- a/5/index.html
+++ b/5/index.html
@@ -58,50 +58,59 @@
     <p class="main-description"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества</h2>
-
       <ol class="advantages-list">
-      <div class="advantages-list-white-block">
         <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
+        <div class="advantages-list-white-block">
           <h3 class="advantages-title advantages-title-white">Настоящий <br> городок</h3>
           <p class="advantages-description-number advantages-description-white">— №1 —</p>
           <p class="advantages-description advantages-description-white">Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
-        </li>
+        </div>
         <div class="advantages-item-img"></div>
-      </div> 
+        </li>
+
         <li class="rgba advantages-item">
+          <!-- <p class="advantages-picture-house"></p> -->
           <h3 class="advantages-title advantages-title-with-picture">Жильё</h3>
-          <p class="advantages-description">Рекомендуем пожить <br> в настоящем мотеле, <br> всё как в кино!</p>
+          <p class="advantages-description advantages-description-with-picture">Рекомендуем пожить <br> в настоящем мотеле, <br> всё как в кино!</p>
         </li>
-        <li class="advantages-item">
+
+        <li class="advantages-item ">
+          <!-- <p class="advantages-picture-food"></p> -->
           <h3 class="advantages-title advantages-title-with-picture">Еда</h3>
-          <p class="advantages-description">Всегда заказывайте <br> топовый фирменный бургер, <br> вы не разочаруетесь!</p>
+          <p class="advantages-description advantages-description-with-picture">Всегда заказывайте <br> топовый фирменный бургер, <br> вы не разочаруетесь!</p>
         </li>
+
         <li class="rgba advantages-item">
+          <!-- <p class="advantages-picture-souvenirs"></p> -->
           <h3 class="advantages-title advantages-title-with-picture">Сувениры</h3>
-          <p class="advantages-description">Не только китайского, <br> но и настоящего местного <br> производства!</p>
+          <p class="advantages-description advantages-description-with-picture">Не только китайского, <br> но и настоящего местного <br> производства!</p>
         </li>
-      <div class="advantages-list-white-block">
-        <img src="images/main/devils-bridge.jpg" width="800" height="384" alt="Каньон «Седона»">
+
         <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
+          <img src="images/main/devils-bridge.jpg" width="800" height="384" alt="Каньон «Седона»">
+          <div class="advantages-list-white-block">
           <h3 class="advantages-title advantages-title-white">Там есть <br> мост дьявола</h3>
           <p class="advantages-description-number advantages-description-white">— №2 —</p>
           <p class="advantages-description advantages-description-white">Да, по нему можно пройти! <br> Если вы осмелитесь, <br> разумеется</p>
+          </div>
         </li>
-      </div>
+      
         <li class="rgba advantages-item">
           <h3 class="advantages-title advantages-title-without-picture">Небольшая <br> площадь</h3>
           <p class="advantages-description-number">— №3 —</p>
-          <p class="advantages-description">Все достопримечательности <br> находятся очень близко</p>
+          <p class="advantages-description advantages-description-without-picture">Все достопримечательности <br> находятся очень близко</p>
         </li>
+
         <li class="rgba2 advantages-item">
           <h3 class="advantages-title advantages-title-without-picture">Красивая <br> дорога</h3>
           <p class="advantages-description-number">— №4 —</p>
-          <p class="advantages-description">Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
+          <p class="advantages-description advantages-description-without-picture">Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
         </li>
+        
         <li class="rgba advantages-item">
           <h3 class="advantages-title advantages-title-without-picture">Мало <br> туристов</h3>
           <p class="advantages-description-number">— №5 —</p>
-          <p class="advantages-description">Большинство едет в Гранд <br> Каньон и толпится там</p>
+          <p class="advantages-description advantages-description-without-picture">Большинство едет в Гранд <br> Каньон и толпится там</p>
         </li>
       </ol>
     </section>
